--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,12 @@
     <![endif]-->
   </head>
   <body>
+    <div class="wrapper">
+          {{contents}}
+
+    </div>
     
     <script src="javascripts/scale.fix.js"></script>
-    {{contents}}
   </body>
 
 </html>
