--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         the midst of this press conference, with all the pressure of trying to<br>
         come up with answer, but it hadn't yet...</p>
       </header>
-      {{contents}}
+      {{content}}
       <footer>
         <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
